--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="description" content="스마트한 여행 루트 계획 서비스" />
+    <title>Trip Flow - 스마트한 여행 계획</title>
   </head>
   <body>
     <div id="root"></div>
