feat: implement trip sharing feature with UUID links

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="스마트한 여행 루트 계획 서비스" />
     <title>Trip Flow - 스마트한 여행 계획</title>
+    <!-- Kakao SDK -->
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.0/kakao.min.js" integrity="sha384-l+xbElFSnPZ2rOaPrU//2FF5B4LB8FiX5q4fXYTlfcG4PGpMkE1vcL7kNXI6Cci0" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
